force-app/main/default/objects/OrderProduct_Soojung__c/OrderProduct_Soojung__c.object-meta.xml
<CustomObject>
    <label>OrderProduct_Soojung</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderProduct_Soojung</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>