force-app/main/default/objects/OrderProduct_Soojung__c/fields/Order_SoojOrder_Soojungung__c.field-meta.xml
<CustomField>
    <fullName>Order_SoojOrder_Soojungung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order_Soojung__c</referenceTo>
    <relationshipLabel>OrderProduct_Soojung</relationshipLabel>
    <relationshipName>OrderProduct_Soojung</relationshipName>
    <type>Lookup</type>
</CustomField>