force-app/main/default/objects/OrderProduct_Soojung__c/fields/Order_Soojung__c.field-meta.xml
<CustomField>
    <fullName>Order_Soojung__c</fullName>
    <label>Order</label>
    <referenceTo>Order_Soojung__c</referenceTo>
    <relationshipLabel>OrderProduct_Soojung</relationshipLabel>
    <relationshipName>OrderProduct_Soojung</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>