force-app/main/default/objects/OrderProduct_Soojung__c/fields/Product_Soojung__c.field-meta.xml
<CustomField>
    <fullName>Product_Soojung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product_Soojung__c</referenceTo>
    <relationshipLabel>OrderProduct_Soojung</relationshipLabel>
    <relationshipName>OrderProduct_Soojung</relationshipName>
    <type>Lookup</type>
</CustomField>